# simple-evals

./: pyproject.toml
mongsm/: converter.ipynb  history_b.tsv  md (1).txt  md (2).txt  md (4).txt  md (5).txt  md.txt  mgsm_mn_test.tsv  mgsm_mn_translated.tsv  mgsm_mn_valid.tsv  mongsm-mn-train.jsonl  ocr_preprocess.ipynb  qnc.csv  questions_and_choices.json  translate_seed.py  translated_output.tsv  translator.ipynb  Физик-D-хувилбар.pdf.md  туүц.ipynb
monmmlu/: biology_b.tsv  mmlu_MN-MN.csv  mmlu_history_MN-MN.tsv  mmlu_physics_d.tsv  mongolian.csv  social_a.tsv
results/: mgsm_Llama-3.1-8B-Alpaca-MN.html  mgsm_Llama-3.1-8B-Alpaca-MN.json  mgsm_Llama-3.1-8B-Instruct.html  mgsm_Llama-3.1-8B-Instruct.json  mgsm_Mistral-7B-Instruct-v0.3.html  mgsm_Mistral-7B-Instruct-v0.3.json  mgsm_gemma-2-27b-it.html  mgsm_gemma-2-27b-it.json  mgsm_gemma-2-27b-it_DEBUG.html  mgsm_gemma-2-27b-it_DEBUG.json  mgsm_gemma-2-9b-Alpaca-MN.html  mgsm_gemma-2-9b-Alpaca-MN.json  mgsm_gemma-2-9b-it.html  mgsm_gemma-2-9b-it.json  mgsm_gpt-4-turbo-2024-04-09_assistant.html  mgsm_gpt-4-turbo-2024-04-09_assistant.json  mgsm_gpt-4-turbo-2024-04-09_assistant_DEBUG.html  mgsm_gpt-4-turbo-2024-04-09_assistant_DEBUG.json  mgsm_gpt-4-turbo-2024-04-09_chatgpt_DEBUG.html  mgsm_gpt-4-turbo-2024-04-09_chatgpt_DEBUG.json  mgsm_gpt-4o-mini-2024-07-18.html  mgsm_gpt-4o-mini-2024-07-18.json  mgsm_gpt-4o-mini-2024-07-18_DEBUG.html  mgsm_gpt-4o-mini-2024-07-18_DEBUG.json  mgsm_gpt-4o_assistant.html  mgsm_gpt-4o_assistant.json  mgsm_gpt-4o_assistant_DEBUG.html  mgsm_gpt-4o_assistant_DEBUG.json  (+33 more)
(+9 files in other folders)
