[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-evals"
version = "0.1"
description = "A package for evaluation scripts"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
dependencies = [
    "pandas",
    # Add other dependencies here
]

[tool.setuptools.packages.find]
where = ["."]